--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TaskTestcaseTemplate",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Create templates for tasks and test cases to apply to multiple user stories.",
   "keywords": [
     "webpack",
@@ -15,12 +15,10 @@
     "build-library": "rm -rf build/library && webpack --output-path build/library --config webpack-library.config.js && cp docs/README.md build/library/README.mkd && cp docs/*.png build/library",
     "build": "npm run build-production && npm run build-library"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "http://www.opensource.org/licenses/mit-license.php"
-    }
-  ],
+  "license": {
+    "type": "MIT",
+    "url": "http://www.opensource.org/licenses/mit-license.php"
+  },
   "devDependencies": {
     "babel-core": "^6.1.20",
     "babel-eslint": "^4.1.5",
