--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "eslint . --quiet",
     "start": "outputPath=$TARGETPROCESS_MASHUPS_PATH/$npm_package_name; rm -rf $outputPath && NODE_ENV=development webpack --watch --output-path $outputPath",
-    "build-production": "webpack --output-path build --config webpack-production.config.js && mv build/index.js build/release.is",
+    "build-production": "webpack --output-path build --config webpack-production.config.js && mv build/index.js build/release.js",
     "build-library": "rm -rf build/library && webpack --output-path build/library --config webpack-library.config.js && cp docs/README.md build/library/README.mkd && cp docs/*.png build/library",
     "build": "npm run build-production && npm run build-library"
   },
