--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "scripts": {
     "test": "eslint . --quiet",
     "start": "outputPath=$TARGETPROCESS_MASHUPS_PATH/$npm_package_name; rm -rf $outputPath && NODE_ENV=development webpack --watch --output-path $outputPath",
-    "build-production": "webpack --output-path build --config webpack-production.config.js && mv build/index.js build/release.js",
-    "build-library": "rm -rf build/library && webpack --output-path build/library --config webpack-library.config.js && cp docs/README.md build/library/README.mkd && cp docs/*.png build/library",
-    "build": "npm run build-production && npm run build-library"
+    "build:production": "webpack --output-path build --config webpack-production.config.js && mv build/index.js build/release.js",
+    "build:library": "rm -rf build/library && webpack --output-path build/library --config webpack-library.config.js && cp docs/README.md build/library/README.mkd && cp docs/*.png build/library",
+    "build:all": "npm shrinkwrap --dev && npm run build:production && npm run build:library",
+    "commit": "npm test && npm run build:all && git add -A build && git commit -m 'Build' && git push origin HEAD"
   },
   "license": {
     "type": "MIT",
