--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TaskTestcaseTemplate",
-  "version": "1.1.3-1",
+  "version": "1.1.3",
   "description": "Create templates for tasks and test cases to apply to multiple user stories.",
   "keywords": [
     "webpack",
