Add npm-version support

--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "build:production": "webpack --output-path build --config webpack-production.config.js && mv build/index.js build/release.js",
     "build:library": "rm -rf build/library && webpack --output-path build/library --config webpack-library.config.js && cp docs/README.md build/library/README.mkd && cp docs/*.png build/library",
     "build:all": "npm run build:production && npm run build:library",
-    "commit": "npm test && npm shrinkwrap --dev && npm run build:all && git add -A build npm-shrinkwrap.json && git commit -m 'Build' && git push origin HEAD"
+    "preversion": "npm test",
+    "version": "npm run build:all && git add -A build",
+    "postversion": "git push && git push --tags",
+    "version:test": "npm version prerelease"
   },
   "license": {
     "type": "MIT",
