docs(config): Add commented possible values

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "file-loader": "^0.8.4",
     "react": "^0.13.3",
     "style-loader": "^0.12.3",
-    "targetprocess-mashup-config-loader": "targetprocess/targetprocess-mashup-config-loader",
+    "targetprocess-mashup-config-loader": "^1.0.0",
     "targetprocess-mashup-manifest-loader": "targetprocess/targetprocess-mashup-manifest-loader",
     "targetprocess-mashup-webpack-plugin": "targetprocess/targetprocess-mashup-webpack-plugin",
     "webpack": "^1.9.10"
